# BigNum

./: CMakeLists.txt  main.cpp  test_pi.cpp  tests_logic.cpp  tests_math.cpp
headers/: BigNum.h
src/: constructors.cpp  logic_operators.cpp  math_operators.cpp  other_functions.cpp  sum.cpp
